k8s/siterel/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siterel-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /srmain
            pathType: Prefix
            backend:
              service:
                name: srmain
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-http
                port:
                  number: 3001
